<resources>
    <string name="app_name">AppMovilNivelBasico</string>
    <string name="valtvtitulo">Ejercicios Android</string>
    <string name="valtitulobasico">Nivel Básico</string>
    <string name="valtitulomedio">Nivel Medio</string>
    <string name="valtituloavanzado">Nivel Avanzado</string>
    <string name="vale1">Ejercicio #1</string>
    <string name="vale2">Ejercicio #2</string>
    <string name="vale3">Ejercicio #3</string>
    <string name="vale4">Ejercicio #4</string>
    <string name="vale5">Ejercicio #5</string>
    <string name="vale6">Ejercicio #6</string>
    <string name="vale7">Ejercicio #7</string>
    <string name="vale8">Ejercicio #8</string>
    <string name="vale9">Ejercicio #9</string>
    <string name="vale10">Ejercicio #10</string>
    <string name="vale11">Ejercicio #11</string>
    <string name="vale12">Ejercicio #12</string>
    <string name="vale13">Ejercicio #13</string>
    <string name="vale14">Ejercicio #14</string>
    <string name="vale15">Ejercicio #15</string>
    <string name="vale16">Ejercicio #16</string>
    <string name="vale17">Ejercicio #17</string>
    <string name="vale18">Ejercicio #18</string>
    <string name="vale19">Ejercicio #19</string>
    <string name="vale20">Ejercicio #20</string>
    <string name="vale21">Ejercicio #21</string>
    <string name="vale22">Ejercicio #22</string>
    <string name="vale23">Ejercicio #23</string>
    <string name="vale24">Ejercicio #24</string>
    <string name="vale25">Ejercicio #25</string>
    <string name="vale26">Ejercicio #26</string>
    <string name="vale27">Ejercicio #27</string>
    <string name="vale28">Ejercicio #28</string>
    <string name="valtvnumero">Ingrese un número:</string>
    <string name="valbtncalcular">CALCULAR</string>
    <string name="valtvresultado">Resultado:</string>
    <string name="valbtnvolver"><![CDATA[< Volver]]></string>
    <string name="valtvcateto1">Ingresar cateto 1:</string>
    <string name="valtvcateto2">Ingresar cateto 2:</string>
    <string name="valtvnota">Ingresar nota:</string>
    <string name="valtvnumerosnaturales">Ingresar 2 números naturales:</string>
    <string name="valbtnsuma">+</string>
    <string name="valbtnresta">-</string>
    <string name="valbtnmultiplicacion">x</string>
    <string name="valbtndivision">÷</string>
    <string name="valbtnejercicioalazar">EJERCICIO ALAZAR</string>
    <string name="valtvfactorial">Ingrese un número, para calcular su factorial:</string>
    <string name="valtvvelocidadkm">Ingrese la velocidad en km/h</string>
    <string name="valtvfibonacci">Ingrese un número (max. 93), para calcular su serie Fibonacci:</string>
    <string name="valtvmcd">Ingrese 3 números para calcular el MCD:</string>
    <string name="valtvmcm">Ingrese 2 números para calcular el MCM:</string>

</resources>
