<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NivelBasico">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtitulobasico"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale1"
        android:id="@+id/btne1"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale2"
        android:id="@+id/btne2"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale3"
        android:id="@+id/btne3"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale4"
        android:id="@+id/btne4"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale5"
        android:id="@+id/btne5"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale6"
        android:id="@+id/btne6"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale7"
        android:id="@+id/btne7"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale8"
        android:id="@+id/btne8"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale9"
        android:id="@+id/btne9"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale10"
        android:id="@+id/btne10"
        android:textAlignment="center"></Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valbtnvolver"></Button>
    </LinearLayout>
</LinearLayout>