<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NivelMedio">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtitulobasico"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale11"
        android:id="@+id/btne11"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale12"
        android:id="@+id/btne12"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale13"
        android:id="@+id/btne13"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale14"
        android:id="@+id/btne14"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale15"
        android:id="@+id/btne15"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale16"
        android:id="@+id/btne16"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale17"
        android:id="@+id/btne17"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale18"
        android:id="@+id/btne18"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale19"
        android:id="@+id/btne19"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale20"
        android:id="@+id/btne20"
        android:textAlignment="center"></Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valbtnvolver"></Button>
    </LinearLayout>
</LinearLayout>