<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NivelAvanzadoActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtituloavanzado"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale21"
        android:id="@+id/btne21"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale22"
        android:id="@+id/btne22"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale23"
        android:id="@+id/btne23"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale24"
        android:id="@+id/btne24"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale25"
        android:id="@+id/btne25"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale26"
        android:id="@+id/btne26"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale27"
        android:id="@+id/btne27"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vale28"
        android:id="@+id/btne28"
        android:textAlignment="center"></Button>
</LinearLayout>