<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtvtitulo"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center">
    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtitulobasico"
        android:id="@+id/btnbasico"
        android:textSize="16dp"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtitulomedio"
        android:id="@+id/btnmedio"
        android:textSize="16dp"
        android:textAlignment="center"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtituloavanzado"
        android:id="@+id/btnavanzado"
        android:textSize="16dp"
        android:textAlignment="center"></Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center|bottom">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/valbtnejercicioalazar"
            android:id="@+id/btnejercicioalazar"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:id="@+id/tvejercicioalazar"></TextView>
    </LinearLayout>
</LinearLayout>