<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ejercicio27Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vale27"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_margin="20dp"
        android:text="@string/valtvmaxcomundiv"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center">
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/etn1"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="5"
            android:layout_margin="10dp"
            android:textSize="18dp"></EditText>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/etn2"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="5"
            android:layout_margin="10dp"
            android:textSize="18dp"></EditText>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/etn3"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="5"
            android:layout_margin="10dp"
            android:textSize="18dp"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valbtncalcular"
            android:id="@+id/btncalcular"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_margin="10dp"></Button>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valtvresultado"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="10dp"
            android:id="@+id/tvcalculo"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/tvresultado"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valbtnvolver"
            android:layout_margin="10dp"
            android:id="@+id/btnvolver"></Button>
    </LinearLayout>
</LinearLayout>